crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_property_3.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 269
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    property int Foo {}\n}\n\nFoo foo;\n\nvoid main() {\n    foo.Foo;\n         |\n         ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 7,
        "character": 8
      },
      "end": {
        "line": 7,
        "character": 11
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 23
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 17
      },
      "end": {
        "line": 1,
        "character": 20
      }
    }
  }
]
