crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_property_native_1.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 392
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    property int Foo {\n        public native get();\n                       |\n                       ^\n        }\n    }\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 22
      },
      "end": {
        "line": 2,
        "character": 25
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 28
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 22
      },
      "end": {
        "line": 2,
        "character": 25
      }
    }
  }
]
