crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_property_setter_3.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 327
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    property int Foo {\n        public set(int foo) {\n            foo += 1;\n             |\n             ^\n        }\n    }\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 3,
        "character": 12
      },
      "end": {
        "line": 3,
        "character": 15
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 19
      },
      "end": {
        "line": 2,
        "character": 26
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 23
      },
      "end": {
        "line": 2,
        "character": 26
      }
    }
  }
]
